crates/eure-macros/tests/compile_fail/via_and_flatten_ext_conflict.rs
use eure::FromEure;

#[derive(FromEure)]
struct Test {
    #[eure(via = "SomeType", flatten_ext)]
    field: String,
}

fn main() {}
